Name: pod
Version: 1.0.0
Build-type: Simple
Build-Depends: HDBC,
               HDBC-sqlite3,
               HTTP,
               HaXml,
               base,
               directory,
               filepath,
               network,
               network-uri

Executable: pod
Main-Is: PodMain.hs
GHC-Options: -O2
